# Bourgeon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
examples/: README.md  autopot.json  autopot.py  bash.py  basic_info.py  discord.py  irc.py  test_plugin.py  ui_demo.py
src/: CMakeLists.txt  bourgeon.cc  bourgeon.h  main.cc
src/core/: bourgeon.cc  bourgeon.h  native_hooks.cc  native_hooks.h  py_callbacks.cc  py_callbacks.h  ragnarok_client.cc  ragnarok_client.h
src/ddraw/: ddraw.cc  ddraw.h  proxy_idirectdraw.cc  proxy_idirectdraw.h
src/imgui/: imgui_impl_dx7.cc  imgui_impl_dx7.h
src/python/: bourgeon.cc  ragnarok_client.cc
src/ragnarok/: configuration.h  game_mode.cc  game_mode.h  item_info.h  login_mode.cc  login_mode.h  mode_mgr.cc  mode_mgr.h  object_factory.cc  object_factory.h  packets.h  rag_connection.cc  rag_connection.h  ragnarok_client.cc  ragnarok_client.h  session.cc  session.h  session20170613.cc  session20170613.h  session_factory.cc  session_factory.h  talktype.h  ui_window_mgr.cc  ui_window_mgr.h
src/ragnarok/20170613/: mode_mgr.h  rag_connection.h  session.cc  session.h  ui_window_mgr.cc  ui_window_mgr.h
src/ragnarok/mode_mgr/: mode_mgr.cc  mode_mgr.h
src/ragnarok/mode_mgr/20170613/: mode_mgr.cc  mode_mgr.h
src/ragnarok/object_layouts/session/: 20151102.h  20170613.h  20190116.h  layouts.h  macro_utils.h
src/ragnarok/rag_connection/: rag_connection.cc  rag_connection.h  rag_connection_20170613.cc  rag_connection_20170613.h
src/ragnarok/rag_connection/20170613/: rag_connection.cc  rag_connection.h
src/ragnarok/session/: item_info.h  session.cc  session.h  session20170613.cc  session20170613.h  session_20170613.cc  session_20170613.h
src/ragnarok/session/20170613/: session.cc  session.h
src/ragnarok/ui_window_mgr/: ui_window_mgr.cc  ui_window_mgr.h  ui_window_mgr20170613.cc  ui_window_mgr20170613.h  ui_window_mgr_20170613.cc  ui_window_mgr_20170613.h
src/ragnarok/ui_window_mgr/20170613/: ui_window_mgr.cc  ui_window_mgr.h
src/ui/: button.cc  button.h  check_box.cc  check_box.h  combo.cc  combo.h  list_box.cc  list_box.h  separator.cc  separator.h  text.cc  text.h  text_input.cc  text_input.h  widget.h  window.cc  window.h  window_manager.cc  window_manager.h
src/utils/: byte_pattern.cc  byte_pattern.h  log_console.cc  log_console.h
src/utils/hooking/: detours.h  disasm.cc  hook_manager.cc  hook_manager.h  proxy.h
